syntax = "proto3";

package eth.token.approvals.v1;

message Approvals {
  repeated Approval approvals = 1;
}

message Approval {
  enum Schema {
    erc20 = 0;
  }

  // Schema is the string representation of one of the enum defined in Schema. We use it as a String
  // here because Rust code uses a `u32` for its representation but it's nicer for the file format
  // to have the type as a string.
  string schema = 1;

  // The transaction hash that generated that transfer.
  string trx_hash = 2;

  // The index of the log within the transaction's receipts of the block.
  uint64 log_index = 3;
  
  string token = 4;
  string spender = 5;
  string quantity = 6;
}
